cart-app/src/styles/Cart.scss
* {
    box-sizing: border-box;
    font-family: 'Trebuchet MS', sans-serif;
}

// GENERAL
.left-gutter {
    margin-left: 1rem;
}

// CART
.cart {
    margin: 3rem auto;
    max-width: 85%;

    @media screen and (min-width: 800px) {
        max-width: 60rem;
    }
}

// BUTTON
.button {
    background-color: #ebebeb;
    border: none;
    cursor: pointer;
    font-size: .75rem;
    font-weight: 600;
    max-width: min-content;
    padding: .5rem .75rem;

    &:hover {
        background-color: #000;
        color: #fff;
    }
}

.button--remove {
    align-self: flex-end;
}

// HEADER
.header {
    font-size: 1.5rem;
    font-weight: 800;
    margin-bottom: .5rem;
}

// SUBHEADER
.subheader {
    font-size: 1rem;
    font-weight: 400;
    margin: 0;

}

.subheader__wrapper {
    align-items: baseline;
    display: flex;
    justify-content: space-between;
}

// TOTAL
.total {
    font-size: 1rem;
    font-weight: bold;
}

// PRODUCT LIST
.product-list {
    border-bottom: 0.063rem solid #cdcdcd;
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr;
    padding: 0;

    @media (min-width: 800px) {
        grid-template-columns: repeat(3, 1fr);
    }
}

// PRODUCT LIST ITEM
.product-list-item {
    border-radius: 1rem;
    border: 0.063rem solid #000;
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin-bottom: 1rem;
    padding: 1rem;
}

.product-list-item__name{
    font-size: 1rem;
    font-weight: 800;
    margin: 0;
}

.product-list-item__price {
    font-size: .75rem;
    margin: .5rem 0;
}

